name:                rigel-viz
version:             0.1.0.0
synopsis:            A high-level wrapper for vega-lite, via hvega
description:         A high-level wrapper for vega-lite, via hvega. Please see the README for details
homepage:            https://github.com/ocramz/rigel-viz
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           (c) Marco Zocca, 2019
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hvega
                     , lucid

executable rigel-viz
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , rigel-viz

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rigel-viz
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/rigel-viz
