name:                rigel-viz
version:             0.3.0.0
synopsis:            A mid-level wrapper for vega-lite
description:         A mid-level wrapper for vega-lite. Please see the README for details
homepage:            https://github.com/ocramz/rigel-viz
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           (c) Marco Zocca, 2019
category:            Graphics, Data Science, Visualization
build-type:          Simple
extra-source-files:  README.md
                     changelog.md
extra-doc-files:     doc/fig/scatter1.png
                     doc/fig/heatmap1.png                     
cabal-version:       1.18
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3, GHC == 8.6.5, GHC == 8.8.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     RigelViz
                       RigelViz.Vega
                       RigelViz.Vega.Model
                       RigelViz.Vega.Model.Graph
                       RigelViz.Vega.Generics
                       RigelViz.Vega.Types
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , bytestring >= 0.10.8
                     , colour >= 2.3.4
                     , containers >= 0.5.10
                     , aeson >= 1.2.4
                     , exceptions >= 0.8.3
                     , generics-sop >= 0.3.2
                     , microlens
                     , microlens-ghc
                     , microlens-mtl
                     , microlens-th
                     , mtl >= 2.2.2
                     , text >= 1.2.3
                     , vector >= 0.12


-- Visualization tests
executable rigel-viz
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Vega.hs
  other-modules:       RigelViz.Util
  build-depends:       base
                     , rigel-viz
                     , aeson
                     , aeson-pretty >= 0.8.7
                     , bytestring
                     , colour
                     , lucid 
                     , lucid-extras

-- -- Visualization tests
-- executable rigel-viz-schema-validator
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app/schema-validator
--   main-is:             SchemaValidator.hs
--   other-modules:       RigelViz.Util
--   build-depends:       base
--                      , rigel-viz
--                      , aeson
--                      , aeson-pretty >= 0.8.7
--                      , aeson-schema
--                      , containers
   
-- executable viz
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             App1.hs
--   other-modules:       Utils     
--   build-depends:       base
--                      , rigel-viz
--                      , aeson
--                      , aeson-pretty >= 0.8.7
--                      , bytestring
--                      , colour
--                      , lucid >= 2.9.11
--                      , lucid-extras >= 0.2.2


-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , rigel-viz
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/rigel-viz
